--- a/experience/index.html
+++ b/experience/index.html
@@ -9,13 +9,13 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link id='favicon' rel="shortcut icon" href="/assets/images/favicon.png" type="image/x-png">
 
-    <title>Experience | Portfolio Jigar Sable</title>
+    <title>Experience | Portfolio Heritage Solution</title>
 </head>
 <body oncontextmenu="return false">
 
 <!-- navbar starts -->
 <header>
-        <a href="/" class="logo"><i class="fab fa-node-js"></i> Jigar</a>
+        <a href="/" class="logo"><i class="fab fa-node-js"></i> Heritage Solution</a>
 
         <div id="menu" class="fas fa-bars"></div>
         <nav class="navbar">
@@ -23,9 +23,9 @@
             <li><a href="/#home">Home</a></li>
             <li><a href="/#about">About</a></li>
             <li><a href="/#skills">Skills</a></li>
-            <li><a href="/#education">Education</a></li>
+            <!-- <li><a href="/#education">Education</a></li> -->
             <li><a href="/#work">Work</a></li>
-            <li><a class="active" href="/#experience">Experience</a></li>
+            <!-- <li><a class="active" href="/#experience">Experience</a></li> -->
             <li><a href="/#contact">Contact</a></li>
             </ul>
         </nav>
@@ -33,7 +33,7 @@
 <!-- navbar ends -->
 
 <!-- experience section starts -->
-<section class="experience" id="experience">
+<!-- <section class="experience" id="experience">
 
   <h2 class="heading"><i class="fas fa-briefcase"></i> Experience</h2>
   <div class="quote">
@@ -42,26 +42,14 @@
 
   <div class="timeline">
 
-    <div class="container left">
-      <div class="content">
-        <div class="tag">
-          <h2>Self Employed</h2>
-        </div>
-        <div class="desc">
-            <h3>Full Stack Developer</h3>
-            <p>Oct 2021 - present</p>
-        </div>
-      </div>
-    </div>
-
     <div class="container right">
         <div class="content">
           <div class="tag">
-            <h2>DevIncept (Top Contributor)</h2>
+            <h2>Heritage Solution</h2>
           </div>
           <div class="desc">
-              <h3>DCP 2021 Contributor | Open Source Program</h3>
-              <p>July 2021 - October 2021</p>
+              <h3>NodeJs Developer | Employee</h3>
+              <p>Dec 2021 - present</p>
           </div>
         </div>
       </div>
@@ -69,83 +57,11 @@
       <div class="container left">
         <div class="content">
           <div class="tag">
-            <h2>LetsGrowMore Summer of Code</h2>
+            <h2>Heritage Solution</h2>
           </div>
           <div class="desc">
-              <h3>LGM-SOC'21 Participant | Open Source Program</h3>
-              <p>June 2021 - August 2021</p>
-          </div>
-        </div>
-      </div>
-
-    <div class="container right">
-      <div class="content">
-        <div class="tag">
-          <h2>Mapstreak Flyseas</h2>
-        </div>
-        <div class="desc">
-            <h3>Web Developer | Internship</h3>
-            <p>June 2021 - Dec 2021</p>
-        </div>
-      </div>
-    </div>
-
-    <div class="container left">
-      <div class="content">
-        <div class="tag">
-          <h2>The Spark Foundation</h2>
-        </div>
-        <div class="desc">
-            <h3>Website Developer | Internship</h3>
-            <p>May 2021 - June 2021</p>
-        </div>
-      </div>
-    </div>
-
-    <div class="container right">
-      <div class="content">
-        <div class="tag">
-          <h2>The Spark Foundation</h2>
-        </div>
-        <div class="desc">
-            <h3>Mobile Application Developer | Internship</h3>
-            <p>April 2021 - May 2021</p>
-        </div>
-      </div>
-    </div>
-
-    <div class="container left">
-      <div class="content">
-        <div class="tag">
-          <h2>Frshr Technologies</h2>
-        </div>
-        <div class="desc">
-            <h3>Wordpress Developer | Internship</h3>
-            <p>April 2021 - April 2021</p>
-        </div>
-      </div>
-    </div>
-
-    <div class="container right">
-      <div class="content">
-        <div class="tag">
-          <h2>WonderingBlog</h2>
-        </div>
-        <div class="desc">
-            <h3>Web Development & SEO | Internship</h3>
-            <p>March 2021 - April 2021</p>
-        </div>
-      </div>
-    </div>
-
-    <div class="container left">
-        <div class="content">
-          <div class="tag">
-            <h2>Hacktoberfest 2020</h2>
-          </div>
-          <div class="desc">
-              <h3>Contributor | Open Source Program</h3>
-              <p>October 2020 - November 2020</p>
+              <h3>NodeJs Developer | Internship</h3>
+              <p>Dec 2021 - present</p>
           </div>
         </div>
       </div>
@@ -160,7 +76,7 @@
   </div>
 
 </div>
-</section>
+</section> -->
 <!-- experience section ends -->
 
 <!-- footer section starts -->
@@ -169,8 +85,8 @@
   <div class="box-container">
 
       <div class="box">
-          <h3>Jigar's Portfolio</h3>
-          <p>Thank you for visiting my personal portfolio website. Connect with me over socials. <br/> <br/> Keep Rising 🚀. Connect with me over live chat!</p>
+          <h3>Heritage Solution's Portfolio</h3>
+          <p>Thank you for visiting our company's portfolio website. Connect with me over socials. <br/> <br/> Keep Rising 🚀. Connect with me over live chat!</p>
       </div>
 
       <div class="box">
@@ -178,28 +94,28 @@
           <a href="/#home"><i class="fas fa-chevron-circle-right"></i> home</a>
           <a href="/#about"><i class="fas fa-chevron-circle-right"></i> about</a>
           <a href="/#skills"><i class="fas fa-chevron-circle-right"></i> skills</a>
-          <a href="/#education"><i class="fas fa-chevron-circle-right"></i> education</a>
+          <!-- <a href="/#education"><i class="fas fa-chevron-circle-right"></i> education</a> -->
           <a href="/#work"><i class="fas fa-chevron-circle-right"></i> work</a>
-          <a href="/#experience"><i class="fas fa-chevron-circle-right"></i> experience</a>
+          <!-- <a href="/#experience"><i class="fas fa-chevron-circle-right"></i> experience</a> -->
       </div>
 
       <div class="box">
           <h3>contact info</h3>
-          <p> <i class="fas fa-phone"></i>+91 704-302-4736</p>
-          <p> <i class="fas fa-envelope"></i>jigarsable21@gmail.com</p>
-          <p> <i class="fas fa-map-marked-alt"></i>Pune, India-412206</p>
+          <p> <i class="fas fa-phone"></i>+91 8799370794</p>
+          <p> <i class="fas fa-envelope"></i>heritagesolution185@gmail.com</p>
+          <p> <i class="fas fa-map-marked-alt"></i>Surat, India-394101</p>
           <div class="share">
 
             <a href="https://www.linkedin.com/in/jigar-sable" class="fab fa-linkedin" target="_blank"></a>
             <a href="https://github.com/jigar-sable" class="fab fa-github" target="_blank"></a>
-            <a href="mailto:jigarsable21@gmail.com" class="fas fa-envelope" target="_blank"></a>
+            <a href="mailto:heritagesolution185@gmail.com" class="fas fa-envelope" target="_blank"></a>
             <a href="https://twitter.com/jigar_sable" class="fab fa-twitter" target="_blank"></a>
             <a href="https://t.me/lifecode5" class="fab fa-telegram-plane" target="_blank"></a>
           </div>
       </div>
   </div>
 
-  <h1 class="credit">Designed with <i class="fa fa-heart pulse"></i> by <a href="https://www.linkedin.com/in/jigar-sable"> jigar sable</a></h1>
+  <h1 class="credit">Designed with <i class="fa fa-heart pulse"></i> by <a href="https://www.linkedin.com/in/jigar-sable">Heritage Solution</a></h1>
 
 </section>
 <!-- footer section ends -->
