--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
   <!-- Favicon -->
-  <link id='favicon' rel="shortcut icon" href="./assets/images/favicon.png" type="image/x-png">
-  <title>Portfolio | Smit Meshiya</title>
+  <link id='favicon' rel="shortcut icon" href="./assets/images/Heritage.jpeg" type="image/x-png">
+  <title>Portfolio | Heritage Solution</title>
 </head>
 
 <body oncontextmenu="return false">
@@ -281,8 +281,6 @@
   <!-- experience section ends -->
 
 
-
-  
   <!-- contact section starts -->
   <section class="contact" id="contact">
 
