--- a/index.html
+++ b/index.html
@@ -60,16 +60,15 @@
         <ul class="social-icons">
           <li><a class="linkedin" aria-label="LinkedIn" href="https://www.linkedin.com/in/jigar-sable/"
               target="_blank"><i class="fab fa-linkedin"></i></a></li>
-          <li><a class="github" aria-label="GitHub" href="https://github.com/jigar-sable" target="_blank"><i
-                class="fab fa-github"></i></a></li>
+          <li><a class="github" aria-label="GitHub" href="https://wa.me/8799370794" target="_blank"><i
+                class="fab fa-whatsapp"></i></a></li>
           <li><a class="twitter" aria-label="Twitter" href="https://twitter.com/jigar_sable" target="_blank"><i
                 class="fab fa-twitter"></i></a></li>
           <li><a class="telegram" aria-label="Telegram" href="https://t.me/lifecode5" target="_blank"><i
                 class="fab fa-telegram-plane"></i></a></li>
           <li><a class="instagram" aria-label="Instagram" href="https://www.instagram.com/jigarsable.dev"><i
                 class="fab fa-instagram" target="_blank"></i></a></li>
-          <li><a class="dev" aria-label="Dev" href="https://dev.to/jigarsable" target="_blank"><i
-                class="fab fa-dev"></i></a></li>
+          <li><a  aria-label="Mail" href="mailto:heritagesolution185@gmail.com" class="fas fa-envelope" target="_blank"></i></a></li>
         </ul>
       </div>
     </div>
@@ -352,8 +351,8 @@
 
           <a href="https://www.linkedin.com/in/jigar-sable" class="fab fa-linkedin" aria-label="LinkedIn"
             target="_blank"></a>
-          <a href="https://github.com/jigar-sable" class="fab fa-github" aria-label="GitHub" target="_blank"></a>
-          <a href="mailto:smitmeshiya@gmail.com" class="fas fa-envelope" aria-label="Mail" target="_blank"></a>
+          <a href="https://wa.me/8799370794" class="fab fa-whatsapp" aria-label="GitHub" target="_blank"></a>
+          <a href="mailto:heritagesolution185@gmail.com" class="fas fa-envelope" aria-label="Mail" target="_blank"></a>
           <a href="https://twitter.com/jigar_sable" class="fab fa-twitter" aria-label="Twitter" target="_blank"></a>
           <a href="https://t.me/lifecode5" class="fab fa-telegram-plane" aria-label="Telegram" target="_blank"></a>
         </div>
