contact validation remove

--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
               <i class='fas fa-envelope'></i>
             </div>
             <div class="field">
-              <input type="text" name="phone" placeholder="Phone" required minlength="10" maxlength="13">
+              <input type="text" name="phone" placeholder="Phone">
               <i class='fas fa-phone-alt'></i>
             </div>
             <div class="message">
