--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
     <div class="container">
       <div class="content">
         <div class="image-box">
-          <img  src="./assets/images/contact1.png" alt="">
+          <img draggable="false" src="./assets/images/contact1.png" alt="">
         </div>
         <form id="contact-form">
 
