mail related changes

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                 class="fab fa-telegram-plane"></i></a></li>
           <li><a class="instagram" aria-label="Instagram" href="https://www.instagram.com/jigarsable.dev"><i
                 class="fab fa-instagram" target="_blank"></i></a></li>
-          <li><a  aria-label="Mail" href="mailto:heritagesolution185@gmail.com" class="fas fa-envelope" target="_blank"></i></a></li>
+          <li><a  aria-label="Mail" href="heritagesolution185@gmail.com" class="fas fa-envelope" target="_blank"></i></a></li>
         </ul>
       </div>
     </div>
