--- a/index.html
+++ b/index.html
@@ -143,20 +143,20 @@
         <img draggable="false" src="./assets/images/educat/college.jpg" alt="">
         </div>
         <div class="content">
-        <h3>Bachelor of Engineering in Information Technology</h3>
-        <p>Zeal College of engineering and research | SPPU</p>
-        <h4>2020-2024 | Pursuing</h4>
+        <h3>Masters in Computer Applications</h3>
+        <p>University of Mumbai</p>
+        <h4>2016-2019 | Completed</h4>
         </div>
     </div>
 
     <div class="box">
       <div class="image">
-      <img draggable="false" src="./assets/images/educat/school.jpg" alt="">
+      <img draggable="false" src="./assets/images/educat/college.jpg" alt="">
       </div>
       <div class="content">
-      <h3>HSC Science | Informatic Practices</h3>
-      <p>Shri  L. G. Haria Multipurpose School | CBSE</p>
-      <h4>2018-2020 | Completed</h4>
+      <h3>Bachelors of Information TEchnology</h3>
+      <p>University of Mumbai</p>
+      <h4>2013-2016 | Completed</h4>
       </div>
     </div>
 
