--- a/index.html
+++ b/index.html
@@ -73,18 +73,18 @@
     <div class="row">
 
     <div class="image">
-        <img draggable="false" class="tilt" src="./assets/images/profile2.jpg" alt="">
+        <img draggable="false" class="tilt" src="./assets/images/Portfolioimage.jpg" alt="">
     </div>
     <div class="content">
-        <h3>I'm Jigar</h3>
+        <h3>I'm Moiz</h3>
         <span class="tag">Full Stack Developer</span>
         
-        <p>I am a Full-Stack developer based in Pune, India. 
-          I am an Information Technology undergraduate from SPPU.
-          I am very passionate about improving my coding skills & developing applications & websites.
-          I build WebApps and Websites using MERN Stack.
-          Working for myself to improve my skills.
-          Love to build Full-Stack clones. </p>
+        <p>I am a results-driven Data and Analytics Engineer with over 6+ years of experience 
+            designing and implementing data solutions that drive business growth. Specializing 
+            in Microsoft Fabric, Power BI, and the Azure ecosystem, I architect scalable, secure 
+            data models and visualizations that translate complex data into clear, actionable insights. 
+            I have led successful migrations, automated ETL pipelines, and established robust data governance frameworks. 
+            I am deeply committed to leveraging analytics to inform strategy, optimize performance, and empower organizations to make data-driven decisions. </p>
         
         <div class="box-container">
             <!-- <div class="box">
