--- a/index.html
+++ b/index.html
@@ -53,14 +53,13 @@
     </a>
     <div class="socials">
         <ul class="social-icons">
-          <li><a class="linkedin" aria-label="LinkedIn" href="https://www.linkedin.com/in/jigar-sable/" target="_blank"><i class="fab fa-linkedin"></i></a></li> 
-          <li><a class="github" aria-label="GitHub" href="https://github.com/jigar-sable" target="_blank"><i class="fab fa-github"></i></a></li>
-          <li><a class="dev" aria-label="Dev" href="https://dev.to/jigarsable" target="_blank"><i class="fab fa-dev"></i></a></li>
+          <li><a class="linkedin" aria-label="LinkedIn" href="https://www.linkedin.com/in/da-moiz-patvi/" target="_blank"><i class="fab fa-linkedin"></i></a></li> 
+          <li><a class="github" aria-label="GitHub" href="https://github.com/MoizPatvi-Lab" target="_blank"><i class="fab fa-github"></i></a></li>
         </ul>
       </div>
     </div>
 <div class="image">
-    <img draggable="false" class="tilt" src="./assets/images/hero.png" alt="">
+    <img draggable="false" class="tilt" src="./assets/images/bannerimage.png" alt="">
 </div>
 </section>
 <!-- hero section ends -->
@@ -77,7 +76,7 @@
     </div>
     <div class="content">
         <h3>I'm Moiz</h3>
-        <span class="tag">Full Stack Developer</span>
+        <span class="tag">Data Analyst</span>
         
         <p>I am a results-driven Data and Analytics Engineer with over 6+ years of experience 
             designing and implementing data solutions that drive business growth. Specializing 
@@ -92,13 +91,13 @@
               <p><span> phone : </span> +91 XXX-XXX-XXXX</p>
             </div> -->
             <div class="box">
-              <p><span> email : </span> jigarsable21@gmail.com</p>
-              <p><span> place : </span> Pune, India - 412206</p>
+              <p><span> email : </span> moiz.bid@gmail.com</p>
+              <p><span> place : </span> Plano, Texas - 75074</p>
             </div>
         </div>
         
         <div class="resumebtn">
-            <a href="https://drive.google.com/file/d/1rZiXl562q7aVyk1kJ2nO85YBAq8ixTiw/view" target="_blank" class="btn"><span>Resume</span>
+            <a href="https://drive.google.com/drive/u/0/folders/1hFK6GdMm0M1Pw2TXQ9YdktzMOfUMjH-1" target="_blank" class="btn"><span>Resume</span>
                 <i class="fas fa-chevron-right"></i>
             </a>
         </div>
