--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         <h3>I'm Moiz</h3>
         <span class="tag">Data Analyst</span>
         
-        <p>I am a results-driven Data and Analytics Engineer with over 6+ years of experience 
+        <p style="text-align: justify;">I am a results-driven Data and Analytics Engineer with over 6+ years of experience 
             designing and implementing data solutions that drive business growth. Specializing 
             in Microsoft Fabric, Power BI, and the Azure ecosystem, I architect scalable, secure 
             data models and visualizations that translate complex data into clear, actionable insights. 
