--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
       </div>
     </div>
 <div class="image">
-    <img draggable="false" class="tilt" src="./assets/images/mpimage.png" alt="">
+    <img draggable="false" class="tilt" src="./assets/images/mpimageNew.png" alt="">
 </div>
 </section>
 <!-- hero section ends -->
