--- a/index.html
+++ b/index.html
@@ -208,11 +208,11 @@
     <div class="container right">
       <div class="content">
         <div class="tag">
-          <h2>Self Employed</h2>
+          <h2>Multicloud4u Technology</h2>
         </div>
         <div class="desc">
-            <h3>Full Stack Developer</h3>
-            <p>Oct 2021 - present</p>
+            <h3>Sr. Data and Analytics Engineer</h3>
+            <p>Mar 2023 - Jan 2025</p>
         </div>
       </div>
     </div>
@@ -220,11 +220,11 @@
     <div class="container left">
       <div class="content">
         <div class="tag">
-          <h2>Mapstreak Flyseas</h2>
+          <h2>Predoole Analytics Pvt. Ltd</h2>
         </div>
         <div class="desc">
-            <h3>Web Developer | Internship</h3>
-            <p>June 2021 - Dec 2021</p>
+            <h3>Data Analyst</h3>
+            <p>Aug 2019 - Feb 2023</p>
         </div>
       </div>
     </div>
@@ -232,11 +232,11 @@
     <div class="container right">
       <div class="content">
         <div class="tag">
-          <h2>The Spark Foundation</h2>
+          <h2>Addend Analytics</h2>
         </div>
         <div class="desc">
-            <h3>Website Developer | Internship</h3>
-            <p>May 2021 - June 2021</p>
+            <h3> Data Analyst</h3>
+            <p>Jun 2019 - Aug 2019</p>
         </div>
       </div>
     </div>
@@ -244,16 +244,16 @@
     <div class="container left">
       <div class="content">
         <div class="tag">
-          <h2>The Spark Foundation</h2>
+          <h2>Techmorphs Infotech</h2>
         </div>
         <div class="desc">
-            <h3>Mobile Application Developer | Internship</h3>
-            <p>April 2021 - May 2021</p>
+            <h3>Jr Analyst</h3>
+            <p>Nov 2018 - Jun 2019</p>
         </div>
       </div>
     </div>
 
-    <div class="container right">
+ <!--   <div class="container right">
       <div class="content">
         <div class="tag">
           <h2>Frshr Technologies</h2>
@@ -282,7 +282,7 @@
     <a href="/experience" class="btn"><span>View All</span>
       <i class="fas fa-arrow-right"></i>
   </a>
-  </div>
+  </div> -->
 
 </div>
 
@@ -336,7 +336,7 @@
   <div class="box-container">
 
       <div class="box">
-          <h3>Jigar's Portfolio</h3>
+          <h3>Moiz's Portfolio</h3>
           <p>Thank you for visiting my personal portfolio website. Connect with me over socials. <br/> <br/> Keep Rising 🚀. Connect with me over live chat!</p>
       </div>
 
@@ -352,21 +352,19 @@
 
       <div class="box">
           <h3>contact info</h3>
-          <p> <i class="fas fa-phone"></i>+91 XXX-XXX-XXXX</p>
-          <p> <i class="fas fa-envelope"></i>jigarsable21@gmail.com</p>
-          <p> <i class="fas fa-map-marked-alt"></i>Pune, India-412206</p>
+          <p> <i class="fas fa-phone"></i>(857)-389-9111</p>
+          <p> <i class="fas fa-envelope"></i>moiz.bid@gmail.com</p>
+          <p> <i class="fas fa-map-marked-alt"></i>Plano, Texas - 75074</p>
           <div class="share">
 
-              <a href="https://www.linkedin.com/in/jigar-sable" class="fab fa-linkedin" aria-label="LinkedIn" target="_blank"></a>
-              <a href="https://github.com/jigar-sable" class="fab fa-github" aria-label="GitHub" target="_blank"></a>
-              <a href="mailto:jigarsable21@gmail.com" class="fas fa-envelope" aria-label="Mail" target="_blank"></a>
-              <a href="https://twitter.com/jigar_sable" class="fab fa-twitter" aria-label="Twitter" target="_blank"></a>
-              <a href="https://t.me/lifecode5" class="fab fa-telegram-plane" aria-label="Telegram" target="_blank"></a>
+              <a href="https://www.linkedin.com/in/da-moiz-patvi/" class="fab fa-linkedin" aria-label="LinkedIn" target="_blank"></a>
+              <a href="https://github.com/MoizPatvi-Lab" class="fab fa-github" aria-label="GitHub" target="_blank"></a>
+              <a href="mailto:moiz.bid@gmail.com" class="fas fa-envelope" aria-label="Mail" target="_blank"></a>
           </div>
       </div>
   </div>
 
-  <h1 class="credit">Designed with <i class="fa fa-heart pulse"></i> by <a href="https://www.linkedin.com/in/jigar-sable"> jigar sable</a></h1>
+  <h1 class="credit">Designed with <i class="fa fa-heart pulse"></i> by <a href="https://www.linkedin.com/in/jigar-sable"> Moiz Patvi</a></h1>
 
 </section>
 <!-- footer section ends -->
