--- a/projects/index.html
+++ b/projects/index.html
@@ -38,8 +38,8 @@
   
   <div id="filters" class="button-group">
     <button class="btn is-checked" data-filter="*">All Projects</button>
-    <button class="btn" data-filter=".mern">Data Analytics</button>
-    <button class="btn" data-filter=".lamp">Data Science</button>
+    <button class="btn" data-filter=".analytics">Data Analytics</button>
+    <button class="btn" data-filter=".ds">Data Science</button>
   </div>
 
   <div class="box-container">
