--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 <!-- navbar starts -->
 <header>
-        <a href="/" class="logo"><i class="fas fa-database"></i> Moiz</a>
+        <a href="/" class="logo"><i class="fas fa-chart-bar"></i> Moiz</a>
 
         <div id="menu" class="fas fa-bars"></div>
         <nav class="navbar">
