--- a/index.html
+++ b/index.html
@@ -128,40 +128,7 @@
 <!-- skills section ends -->
 
 
-<!-- education section starts -->
-<section class="education" id="education">
 
-  <h1 class="heading"><i class="fas fa-graduation-cap"></i> My <span>Education</span></h1>
-
-    <p class="qoute">Education is not the learning of facts, but the training of the mind to think.</p>
-
-    <div class="box-container">
-
-    <div class="box">
-        <div class="image">
-        <img draggable="false" src="./assets/images/educat/college.jpg" alt="">
-        </div>
-        <div class="content">
-        <h3>Masters in Computer Applications</h3>
-        <p>University of Mumbai</p>
-        <h4>2016-2019 | Completed</h4>
-        </div>
-    </div>
-
-    <div class="box">
-      <div class="image">
-      <img draggable="false" src="./assets/images/educat/college.jpg" alt="">
-      </div>
-      <div class="content">
-      <h3>Bachelors of Information TEchnology</h3>
-      <p>University of Mumbai</p>
-      <h4>2013-2016 | Completed</h4>
-      </div>
-    </div>
-
-</div>
-</section>
-<!-- education section ends -->
 
 
 <!-- work project section starts -->
@@ -289,44 +256,68 @@
 </section>
 <!-- experience section ends -->
 
-<!-- contact section starts -->
-<section class="contact" id="contact">
-  <h2 class="heading"><i class="fas fa-headset"></i> Get in <span>Touch</span></h2>
+<!-- education section starts -->
+<section class="education" id="education">
 
-  <div class="container">
-    <div class="content">
-      <div class="image-box">
-        <img draggable="false" src="./assets/images/contact1.png" alt="Contact Image">
-      </div>
-      <form id="contact-form">
-        <div class="form-group">
-          <div class="field">
-            <input type="text" name="name" placeholder="Name" required>
-            <i class="fas fa-user"></i>
-          </div>
-          <div class="field">
-            <input type="text" name="email" placeholder="Email" required>
-            <i class="fas fa-envelope"></i>
-          </div>
-          <div class="field">
-            <input type="text" name="phone" placeholder="Phone">
-            <i class="fas fa-phone-alt"></i>
-          </div>
-          <div class="message">
-            <textarea name="message" placeholder="Message" required></textarea>
-            <i class="fas fa-comment-dots"></i>
-          </div>
+  <h1 class="heading"><i class="fas fa-graduation-cap"></i> My <span>Education</span></h1>
+
+    <p class="qoute">Education is not the learning of facts, but the training of the mind to think.</p>
+
+    <div class="box-container">
+
+    <div class="box">
+        <div class="image">
+        <img draggable="false" src="./assets/images/educat/college.jpg" alt="">
         </div>
-        <div class="button-area">
-          <button type="submit">
-            Submit <i class="fa fa-paper-plane"></i>
-          </button>
+        <div class="content">
+        <h3>Masters in Computer Applications</h3>
+        <p>University of Mumbai</p>
+        <h4>2016-2019 | Completed</h4>
         </div>
-      </form>
     </div>
+
+    <div class="box">
+      <div class="image">
+      <img draggable="false" src="./assets/images/educat/college.jpg" alt="">
+      </div>
+      <div class="content">
+      <h3>Bachelors of Information TEchnology</h3>
+      <p>University of Mumbai</p>
+      <h4>2013-2016 | Completed</h4>
+      </div>
+    </div>
+
+</div>
+</section>
+<!-- education section ends -->
+
+
+<!-- certification section starts -->
+<section class="certifications" id="certifications">
+  <h2 class="heading"><i class="fas fa-certificate"></i> My <span>Certifications</span></h2>
+
+  <div class="container" style="display: flex; flex-wrap: wrap; gap: 20px; justify-content: center;">
+    
+    <!-- Certificate 1 -->
+    <div class="cert-card" style="width: 200px; cursor: pointer;">
+      <a href="https://certificate-link1.com" target="_blank">
+        <img src="./assets/images/cert1.png" alt="Certification 1" style="width: 100%; border-radius: 10px;">
+      </a>
+    </div>
+
+    <!-- Certificate 2 -->
+    <div class="cert-card" style="width: 200px; cursor: pointer;">
+      <a href="https://certificate-link2.com" target="_blank">
+        <img src="./assets/images/cert2.png" alt="Certification 2" style="width: 100%; border-radius: 10px;">
+      </a>
+    </div>
+
+    <!-- Add more certificate blocks as needed -->
+    
   </div>
 </section>
-<!-- contact section ends -->
+<!-- certification section ends -->
+
 
 
 
