--- a/index.html
+++ b/index.html
@@ -300,17 +300,46 @@
     
     <!-- Certificate 1 -->
     <div class="cert-card" style="width: 200px; cursor: pointer;">
-      <a href="https://certificate-link1.com" target="_blank">
+      <a href="https://learn.microsoft.com/api/credentials/share/en-us/MoizPatvi-3063/1E67B54854DCA1E3?sharingId=90069ADFE5EBB120" target="_blank">
         <img src="./assets/images/cert1.png" alt="Certification 1" style="width: 100%; border-radius: 10px;">
       </a>
     </div>
 
     <!-- Certificate 2 -->
     <div class="cert-card" style="width: 200px; cursor: pointer;">
-      <a href="https://certificate-link2.com" target="_blank">
+      <a href="https://learn.microsoft.com/api/credentials/share/en-us/MoizPatvi-3063/A6B0CE88E71E0559?sharingId=90069ADFE5EBB120" target="_blank">
         <img src="./assets/images/cert2.png" alt="Certification 2" style="width: 100%; border-radius: 10px;">
       </a>
     </div>
+
+    <!-- Certificate 3 -->
+    <div class="cert-card" style="width: 200px; cursor: pointer;">
+      <a href=https://learn.microsoft.com/api/credentials/share/en-us/MoizPatvi-3063/E4FA63D17771F02C?sharingId=90069ADFE5EBB120" target="_blank">
+        <img src="./assets/images/cert3.png" alt="Certification 2" style="width: 100%; border-radius: 10px;">
+      </a>
+    </div>
+
+        <!-- Certificate 4 -->
+    <div class="cert-card" style="width: 200px; cursor: pointer;">
+      <a href="https://courses.cognitiveclass.ai/certificates/128fac87be8f4d6a8214089a1ce521d3" target="_blank">
+        <img src="./assets/images/cert4.png" alt="Certification 1" style="width: 100%; border-radius: 10px;">
+      </a>
+    </div>
+
+    <!-- Certificate 5 -->
+    <div class="cert-card" style="width: 200px; cursor: pointer;">
+      <a href="https://courses.cognitiveclass.ai/certificates/3115396770ab40c9ac9b7af246241869" target="_blank">
+        <img src="./assets/images/cert5.png" alt="Certification 2" style="width: 100%; border-radius: 10px;">
+      </a>
+    </div>
+
+    <!-- Certificate 6 -->
+    <div class="cert-card" style="width: 200px; cursor: pointer;">
+      <a href="https://courses.cognitiveclass.ai/certificates/c8acae0856c047689e893052dccc2262" target="_blank">
+        <img src="./assets/images/cert6.png" alt="Certification 2" style="width: 100%; border-radius: 10px;">
+      </a>
+    </div>
+
 
     <!-- Add more certificate blocks as needed -->
     
