--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
       <a href="https://learn.microsoft.com/api/credentials/share/en-us/MoizPatvi-3063/1E67B54854DCA1E3?sharingId=90069ADFE5EBB120" target="_blank">
         <img src="./assets/images/cert1.png" alt="Certification 1"
              style="width: 100%; height: 150px; object-fit: cover; border-radius: 10px;">
-        <p style="margin-top: 10px; font-weight: bold; font-size: 14px;">Certification 1</p>
+        <p style="margin-top: 10px; font-weight: bold; font-size: 14px;">Microsoft-Azure Data Fundamentals</p>
       </a>
     </div>
 
@@ -314,7 +314,16 @@
       <a href="https://learn.microsoft.com/api/credentials/share/en-us/MoizPatvi-3063/A6B0CE88E71E0559?sharingId=90069ADFE5EBB120" target="_blank">
         <img src="./assets/images/cert2.png" alt="Certification 2"
              style="width: 100%; height: 150px; object-fit: cover; border-radius: 10px;">
-        <p style="margin-top: 10px; font-weight: bold; font-size: 14px;">Certification 2</p>
+        <p style="margin-top: 10px; font-weight: bold; font-size: 14px;">Microsoft-Fabric Analytics Engineer Associate</p>
+      </a>
+    </div>
+
+    <!-- Certificate 3 -->
+    <div class="cert-card" style="width: 200px; height: 240px; cursor: pointer; text-align: center;">
+      <a href="https://learn.microsoft.com/api/credentials/share/en-us/MoizPatvi-3063/E4FA63D17771F02C?sharingId=90069ADFE5EBB120" target="_blank">
+        <img src="./assets/images/cert3.png" alt="Certification 3"
+             style="width: 100%; height: 150px; object-fit: cover; border-radius: 10px;">
+        <p style="margin-top: 10px; font-weight: bold; font-size: 14px;">Microsoft-Data Analyst Associate</p>
       </a>
     </div>
 
@@ -323,7 +332,7 @@
       <a href="https://courses.cognitiveclass.ai/certificates/128fac87be8f4d6a8214089a1ce521d3" target="_blank">
         <img src="./assets/images/cert4.png" alt="Certification 3"
              style="width: 100%; height: 150px; object-fit: cover; border-radius: 10px;">
-        <p style="margin-top: 10px; font-weight: bold; font-size: 14px;">Certification 3</p>
+        <p style="margin-top: 10px; font-weight: bold; font-size: 14px;">IBM-ML with Python</p>
       </a>
     </div>
 
@@ -334,7 +343,7 @@
       <a href="https://courses.cognitiveclass.ai/certificates/3115396770ab40c9ac9b7af246241869" target="_blank">
         <img src="./assets/images/cert5.png" alt="Certification 2"
              style="width: 100%; height: 150px; object-fit: cover; border-radius: 10px;">
-        <p style="margin-top: 10px; font-weight: bold; font-size: 14px;">Certification 2</p>
+        <p style="margin-top: 10px; font-weight: bold; font-size: 14px;">IBM-Data Visualization</p>
       </a>
     </div>
 
@@ -344,7 +353,7 @@
       <a href="https://courses.cognitiveclass.ai/certificates/c8acae0856c047689e893052dccc2262" target="_blank">
         <img src="./assets/images/cert6.png" alt="Certification 2"
              style="width: 100%; height: 150px; object-fit: cover; border-radius: 10px;">
-        <p style="margin-top: 10px; font-weight: bold; font-size: 14px;">Certification 2</p>
+        <p style="margin-top: 10px; font-weight: bold; font-size: 14px;">IBM-DS</p>
       </a>
     </div>
 
