--- a/projects/index.html
+++ b/projects/index.html
@@ -14,7 +14,7 @@
 
 <!-- navbar starts -->
 <header>
-        <a href="/" class="logo"><i class="fas fa-chart-bar"></i> Moiz</a>
+        <a href="../index.html#home" class="logo"><i class="fas fa-chart-bar"></i> Moiz</a>
 
         <div id="menu" class="fas fa-bars"></div>
         <nav class="navbar">
