--- a/index.html
+++ b/index.html
@@ -401,7 +401,7 @@
       </div>
   </div>
 
-  <h1 class="credit">Designed with <i class="fa fa-heart pulse"></i> by <a href="https://www.linkedin.com/in/jigar-sable"> Moiz Patvi</a></h1>
+  <h1 class="credit">Designed with <i class="fa fa-heart pulse"></i> by <a href="https://www.linkedin.com/in/da-moiz-patvi/"> Moiz Patvi</a></h1>
 
 </section>
 <!-- footer section ends -->
