--- a/projects/1.html
+++ b/projects/1.html
@@ -11,7 +11,7 @@
     integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link id='favicon' rel="shortcut icon" href="/assets/images/Heritage.jpeg" type="image/x-png">
-  <title>Projects | Portfolio Smit Meshiya</title>
+  <title>Projects | Portfolio Heritage Solution</title>
 </head>
 
 <body oncontextmenu="return false">
@@ -26,7 +26,7 @@
         <li><a href="/#home">Home</a></li>
         <li><a href="/#about">About</a></li>
         <li><a href="/#skills">Skills</a></li>
-        <li><a href="/#education">Education</a></li>
+        <!-- <li><a href="/#education">Education</a></li> -->
         <li><a class="active" href="/#work">Work</a></li>
         <li><a href="/#experience">Experience</a></li>
         <li><a href="/#contact">Contact</a></li>
@@ -57,7 +57,7 @@
             <h3>Portfolio Website</h3>
           </div>
           <div class="desc">
-            <p>Personal portfolio website. Don't need much info about it, just scroll down. You're here only!</p>
+            <p>Company portfolio website. Don't need much info about it, just scroll down. You're here only!</p>
             <div class="btns">
               <a href="#" class="btn" target="_blank"><i class="fas fa-eye"></i> View</a>
               <a href="#" class="btn" target="_blank">Code <i class="fas fa-code"></i></a>
