--- a/projects/1.html
+++ b/projects/1.html
@@ -11,7 +11,7 @@
     integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link id='favicon' rel="shortcut icon" href="/assets/images/Heritage.jpeg" type="image/x-png">
-  <title>Projects | Portfolio Heritage Solution</title>
+  <title>Projects | Heritage Solution</title>
 </head>
 
 <body oncontextmenu="return false">
