index file changes

--- a/index.html
+++ b/index.html
@@ -58,15 +58,11 @@
       </a>
       <div class="socials">
         <ul class="social-icons">
-          <li><a class="linkedin" aria-label="LinkedIn" href="https://www.linkedin.com/in/jigar-sable/"
+          <li><a class="linkedin" aria-label="LinkedIn" href="https://www.linkedin.com/in/heritage-solution-37670b354/"
               target="_blank"><i class="fab fa-linkedin"></i></a></li>
           <li><a class="github" aria-label="GitHub" href="https://wa.me/8799370794" target="_blank"><i
                 class="fab fa-whatsapp"></i></a></li>
-          <li><a class="twitter" aria-label="Twitter" href="https://twitter.com/jigar_sable" target="_blank"><i
-                class="fab fa-twitter"></i></a></li>
-          <li><a class="telegram" aria-label="Telegram" href="https://t.me/lifecode5" target="_blank"><i
-                class="fab fa-telegram-plane"></i></a></li>
-          <li><a class="instagram" aria-label="Instagram" href="https://www.instagram.com/jigarsable.dev"><i
+          <li><a class="instagram" aria-label="Instagram" href="https://www.instagram.com/heritage__solutions?igsh=MTBneWhtOW4wcGt5Ng%3D%3D&utm_source=qr"><i
                 class="fab fa-instagram" target="_blank"></i></a></li>
           <li><a  aria-label="Mail" href="heritagesolution185@gmail.com" class="fas fa-envelope" target="_blank"></i></a></li>
         </ul>
@@ -281,7 +277,7 @@
 
 
   <!-- contact section starts -->
-  <section class="contact" id="contact">
+  <!-- <section class="contact" id="contact">
 
     <h2 class="heading"><i class="fas fa-headset"></i> Get in <span>Touch</span></h2>
 
@@ -317,7 +313,7 @@
         </form>
       </div>
     </div>
-  </section>
+  </section> -->
   <!-- contact section ends -->
 
 
@@ -349,12 +345,10 @@
         <p> <i class="fas fa-map-marked-alt"></i>Surat, India-394101</p>
         <div class="share">
 
-          <a href="https://www.linkedin.com/in/jigar-sable" class="fab fa-linkedin" aria-label="LinkedIn"
+          <a href="https://www.linkedin.com/in/heritage-solution-37670b354/" class="fab fa-linkedin" aria-label="LinkedIn"
             target="_blank"></a>
           <a href="https://wa.me/8799370794" class="fab fa-whatsapp" aria-label="GitHub" target="_blank"></a>
           <a href="mailto:heritagesolution185@gmail.com" class="fas fa-envelope" aria-label="Mail" target="_blank"></a>
-          <a href="https://twitter.com/jigar_sable" class="fab fa-twitter" aria-label="Twitter" target="_blank"></a>
-          <a href="https://t.me/lifecode5" class="fab fa-telegram-plane" aria-label="Telegram" target="_blank"></a>
         </div>
       </div>
     </div>
