--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <!-- <li><a href="#education">Education</a></li> -->
         <li><a href="#work">Work</a></li>
         <!-- <li><a href="#experience">Experience</a></li> -->
-        <li><a href="#contact">Contact</a></li>
+        <!-- <li><a href="#contact">Contact</a></li> -->
       </ul>
     </nav>
   </header>
