--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <!-- <li><a href="#education">Education</a></li> -->
         <li><a href="#work">Work</a></li>
         <!-- <li><a href="#experience">Experience</a></li> -->
-        <!-- <li><a href="#contact">Contact</a></li> -->
+        <li><a href="#contact">Contact</a></li>
       </ul>
     </nav>
   </header>
@@ -225,7 +225,7 @@
     </div>
 
     <div class="viewall">
-      <a href="/Portfolio-Website/projects/projects.json" class="btn"><span>View All</span>
+      <a href="/projects" class="btn"><span>View All</span>
         <i class="fas fa-arrow-right"></i>
       </a>
     </div>
