--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
     </div>
 
     <div class="viewall">
-      <a href="projects/1.html#work" class="btn"><span>View All</span>
+      <a href="projects/1.html/" class="btn"><span>View All</span>
         <i class="fas fa-arrow-right"></i>
       </a>
     </div>
