--- a/projects/1.html
+++ b/projects/1.html
@@ -5,12 +5,12 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./style.css">
+  <link rel="stylesheet" href="../projects/style.css">
   <!-- Font Awesome -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
     integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
-  <link id='favicon' rel="shortcut icon" href="/assets/images/Heritage.jpeg" type="image/x-png">
+  <link id='favicon' rel="shortcut icon" href="../assets/images/Heritage.jpeg" type="image/x-png">
   <title>Projects | Heritage Solution</title>
 </head>
 
@@ -51,7 +51,7 @@
     <div class="box-container">
 
       <div class="box tilt">
-        <img src="/assets/images/projects/agecalc.PNG" alt="" />
+        <img src="../assets/images/projects/agecalc.PNG" alt="" />
         <div class="content">
           <div class="tag">
             <h3>Portfolio Website</h3>
