--- a/projects/1.html
+++ b/projects/1.html
@@ -29,7 +29,7 @@
         <!-- <li><a href="/#education">Education</a></li> -->
         <li><a class="active" href="/#work">Work</a></li>
         <li><a href="/#experience">Experience</a></li>
-        <li><a href="/#contact">Contact</a></li>
+        <!-- <li><a href="/#contact">Contact</a></li> -->
       </ul>
     </nav>
   </header>
