--- a/404.html
+++ b/404.html
@@ -80,7 +80,7 @@
       </div>
   </div>
 
-  <h1 class="credit">Dibuat dengan <i class="fa fa-heart pulse"></i> oleh <a href="https://www.linkedin.com/in/muhamadimam/"> Muhamad Imam Fakhrurozi</a></h1>
+  <h1 class="credit">Dibuat dengan <i class="fa fa-heart pulse"></i> oleh <a href="https://www.linkedin.com/in/muhamadimam/"> Muhamad Imam Fahurrozi</a></h1>
 
 </section>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
