--- a/404.html
+++ b/404.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="/assets/css/404.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link id='favicon' rel="shortcut icon" href="/assets/images/favicon.png" type="image/x-png">
-    <title>Tersesat! Halaman Tidak Ditemukan</title>
+    <title>Got Lost! Page Not Found</title>
 </head>
 <body oncontextmenu="return false">
 
@@ -34,13 +34,13 @@
           </div>
           
           <div class="msg">
-          <h3>Sepertinya Anda tersesat</h3>
-          <p>Halaman yang Anda cari tidak tersedia!</p>
+          <h3>Looks like you're lost</h3>
+          <p>The page you are looking for is not available!</p>
             
           <div class="backbtn">
             <a href="/" class="btn">
                 <i class="fas fa-arrow-left"></i>
-                <span>Kembali ke Beranda</span>
+                <span>Back to Home</span>
             </a>
           </div>
 
@@ -52,12 +52,12 @@
   <div class="box-container">
 
       <div class="box">
-          <h3>Portofolio Imam</h3>
-          <p>Terima kasih telah mengunjungi website portofolio pribadi saya. Terhubunglah dengan saya melalui media sosial. <br/> <br/> Terus Berkarya 🚀.</p>
+          <h3>Imam's Portfolio</h3>
+          <p>Thank you for visiting my personal portfolio website. Connect with me over socials. <br/> <br/> Keep Rising 🚀.</p>
       </div>
 
       <div class="box">
-          <h3>Link Cepat</h3>
+          <h3>quick links</h3>
           <a href="/#home"><i class="fas fa-chevron-circle-right"></i> Home</a>
           <a href="/#about"><i class="fas fa-chevron-circle-right"></i> About</a>
           <a href="/#skills"><i class="fas fa-chevron-circle-right"></i> Skills</a>
@@ -67,20 +67,21 @@
       </div>
 
       <div class="box">
-          <h3>Info Kontak</h3>
+          <h3>contact info</h3>
           <p> <i class="fas fa-phone"></i> +6287737587548</p>
           <p> <i class="fas fa-envelope"></i> imamfahurrozi@gmail.com</p>
           <p> <i class="fas fa-map-marked-alt"></i> Grobogan, Indonesia</p>
           <div class="share">
 
-              <a href="https://www.linkedin.com/in/muhamadimam/" class="fab fa-linkedin" target="_blank"></a>
-              <a href="https://github.com/muhamadimamfa" class="fab fa-github" target="_blank"></a>
+              <a href="https://www.linkedin.com/in/muhamad-imam-fahurrozi-424789255" class="fab fa-linkedin" target="_blank"></a>
+              <a href="https://github.com/muhamadimamfa" target="_blank" class="fab fa-github" aria-label="GitHub"></a>
               <a href="mailto:imamfahurrozi@gmail.com" class="fas fa-envelope" target="_blank"></a>
-              </div>
+              <a href="https://www.instagram.com/muhamadimamfa" class="fab fa-instagram" aria-label="Instagram" target="_blank"></a>
+          </div>
       </div>
   </div>
 
-  <h1 class="credit">Dibuat dengan <i class="fa fa-heart pulse"></i> oleh <a href="https://www.linkedin.com/in/muhamadimam/"> Muhamad Imam Fahurrozi</a></h1>
+  <h1 class="credit">Designed with <i class="fa fa-heart pulse"></i> by <a href="https://www.linkedin.com/in/muhamad-imam-fahurrozi-424789255/"> Muhamad Imam Fahurrozi</a></h1>
 
 </section>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
