--- a/index.html
+++ b/index.html
@@ -206,9 +206,9 @@
         <img draggable="false" src="./assets/images/educat/college.jpg" alt="">
         </div>
         <div class="content">
-        <h3>Bachelor of Engineering in Agroindustrial Technology</h3>
-        <p>Universitas Brawijaya</p>
-        <h4>August 2021 – July 2025 | Graduated</h4>
+        <h3>Universitas Brawijaya</h3>
+        <p>Agroindustrial Technology (Bachelor of Engineering)</p>
+        <h4>August 2021 – July 2025</h4>
         <ul>
             <li>GPA: 3.46/4.00</li>
             <li>The Most Critical Participant of LKMM-TM FTP UB</li>
@@ -225,8 +225,8 @@
       </div>
       <div class="content">
       <h3>SMAN 1 Purwodadi</h3>
-      <p>Science Program</p>
-      <h4>July 2018 – May 2021 | Graduated</h4>
+      <p>Mathematics and Science</p>
+      <h4>July 2018 – May 2021</h4>
       <ul>
         <li>Vice Chairman of OSIS SMA Negeri 1 Purwodadi</li>
         <li>Vice Chairman of OSIS Forum Grobogan Regency</li>
