--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
 
     <div class="box">
         <div class="image">
-        <img draggable="false" src="./assets/images/educat/college.jpg" alt="">
+        <img draggable="false" src="./assets/images/college.jpeg" alt="">
         </div>
         <div class="content">
         <h3>Universitas Brawijaya</h3>
@@ -221,7 +221,7 @@
 
     <div class="box">
       <div class="image">
-      <img draggable="false" src="./assets/images/educat/school.jpg" alt="">
+      <img draggable="false" src="./assets/images/school.jpg" alt="">
       </div>
       <div class="content">
       <h3>SMAN 1 Purwodadi</h3>
