--- a/experience/index.html
+++ b/experience/index.html
@@ -208,7 +208,7 @@
       </div>
   </div>
 
-  <h1 class="credit">Designed with <i class="fa fa-heart pulse"></i> by <a href="https://www.linkedin.com/in/jigar-sable"> Jigar Sable</a> (adapted for Imam's CV)</h1>
+  <h1 class="credit">Designed with <i class="fa fa-heart pulse"></i> by <a href="https://www.linkedin.com/in/muhamad-imam-fahurrozi-424789255"> Muhamad Imam Fahurrozi</a> (adapted for Imam's CV)</h1>
 
 </section>
 <a href="#experience" class="fas fa-angle-up" id="scroll-top"></a>
