--- a/index.html
+++ b/index.html
@@ -80,15 +80,145 @@
     </div>
     </div>
 </section>
+</header>
 <section class="skills" id="skills">
 
     <h2 class="heading"><i class="fas fa-laptop-code"></i> Skills & <span>Abilities</span></h2>
 
     <div class="container">
         <div class="row" id="skillsContainer">
-            </div>
-    </div>
 
+            <div class="bar">
+                <div class="info">
+                    <img src="https://img.icons8.com/color/48/000000/microsoft-excel-2019--v1.png" alt="Microsoft Excel"/>
+                    <span>Microsoft Excel</span>
+                </div>
+            </div>
+            <div class="bar">
+                <div class="info">
+                    <img src="https://img.icons8.com/color/48/000000/microsoft-powerpoint-2019--v1.png" alt="Microsoft PowerPoint"/>
+                    <span>Microsoft PowerPoint</span>
+                </div>
+            </div>
+            <div class="bar">
+                <div class="info">
+                    <img src="https://img.icons8.com/color/48/000000/microsoft-word-2019--v1.png" alt="Microsoft Word"/>
+                    <span>Microsoft Word</span>
+                </div>
+            </div>
+            <div class="bar">
+                <div class="info">
+                    <img src="https://img.icons8.com/color/48/000000/google-docs.png" alt="Google Workspace"/>
+                    <span>Google Workspace</span>
+                </div>
+            </div>
+            <div class="bar">
+                <div class="info">
+                    <img src="https://img.icons8.com/color/48/000000/google-analytics.png" alt="Google Analytical"/>
+                    <span>Google Analytical</span>
+                </div>
+            </div>
+            <div class="bar">
+                <div class="info">
+                    <img src="https://img.icons8.com/ios-filled/50/000000/gear.png" alt="POM QM"/>
+                    <span>POM QM</span>
+                </div>
+            </div>
+            <div class="bar">
+                <div class="info">
+                    <img src="https://img.icons8.com/ios-filled/50/000000/brain.png" alt="Super Decision"/>
+                    <span>Super Decision</span>
+                </div>
+            </div>
+            <div class="bar">
+                <div class="info">
+                    <img src="https://img.icons8.com/color/48/000000/python--v1.png" alt="Python"/>
+                    <span>Python</span>
+                </div>
+            </div>
+            <div class="bar">
+                <div class="info">
+                    <img src="https://img.icons8.com/color/48/000000/visual-studio-code-2019.png" alt="VS Code"/>
+                    <span>VS Code</span>
+                </div>
+            </div>
+            <div class="bar">
+                <div class="info">
+                    <img src="https://img.icons8.com/color/48/000000/canva.png" alt="Canva"/>
+                    <span>Canva</span>
+                </div>
+            </div>
+            <div class="bar">
+                <div class="info">
+                    <img src="https://img.icons8.com/color/48/000000/adobe-photoshop--v1.png" alt="Photoshop"/>
+                    <span>Photoshop</span>
+                </div>
+            </div>
+            <div class="bar">
+                <div class="info">
+                    <img src="https://img.icons8.com/color/48/000000/autocad.png" alt="AutoCAD"/>
+                    <span>AutoCAD</span>
+                </div>
+            </div>
+
+            <div class="bar">
+                <div class="info">
+                    <i class="fas fa-clock"></i>
+                    <span>Time & Risk Management</span>
+                </div>
+            </div>
+            <div class="bar">
+                <div class="info">
+                    <i class="fas fa-comments"></i>
+                    <span>Communication</span>
+                </div>
+            </div>
+            <div class="bar">
+                <div class="info">
+                    <i class="fas fa-pencil-alt"></i>
+                    <span>Authorship</span>
+                </div>
+            </div>
+            <div class="bar">
+                <div class="info">
+                    <i class="fas fa-lightbulb"></i>
+                    <span>Critical Thinking</span>
+                </div>
+            </div>
+            <div class="bar">
+                <div class="info">
+                    <i class="fas fa-microphone"></i>
+                    <span>Public Speaking</span>
+                </div>
+            </div>
+            <div class="bar">
+                <div class="info">
+                    <i class="fas fa-chart-line"></i>
+                    <span>Analytical Skills</span>
+                </div>
+            </div>
+            <div class="bar">
+                <div class="info">
+                    <i class="fas fa-flask"></i>
+                    <span>Laboratory Skill</span>
+                </div>
+            </div>
+            <div class="bar">
+                <div class="info">
+                    <i class="fas fa-users"></i>
+                    <span>Teamwork</span>
+                </div>
+            </div>
+            <div class="bar">
+                <div class="info">
+                    <i class="fas fa-user-tie"></i>
+                    <span>Leadership</span>
+                </div>
+            </div>
+
+        </div>
+    </div>
+    
 </section>
 <section class="education" id="education">
 
