--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         </div>
         
         <div class="resumebtn">
-            <a href= src="./assets/images/CV_Muhamad Imam Fahurrozi_UB.pdf" alt=""> target="_blank" class="btn"><span>Resume</span>
+            <a href= https://www.linkedin.com/in/muhamad-imam-fahurrozi-424789255 target="_blank" class="btn"><span>Resume</span>
                 <i class="fas fa-chevron-right"></i>
             </a>
         </div>
