--- a/index.html
+++ b/index.html
@@ -70,13 +70,10 @@
               <p><span> place : </span> Grobogan, Indonesia</p>
             </div>
         </div>
-        
         <div class="resumebtn">
-            <a href= https://www.linkedin.com/in/muhamad-imam-fahurrozi-424789255 target="_blank" class="btn"><span>Resume</span>
+            <a href="assets/images/CV_Muhamad Imam Fahurrozi_UB.pdf" target="_blank" class="btn"><span>Resume</span>
                 <i class="fas fa-chevron-right"></i>
             </a>
-        </div>
-
     </div>
     </div>
 </section>
