--- a/projects/index.html
+++ b/projects/index.html
@@ -55,29 +55,29 @@
     </nav>
 
 </header>
-
 <section class="work" id="work">
 
+    <h2 class="heading"><i class="fas fa-laptop-code"></i> Projects <span>Made</span></h2>
+    
+    <div id="filters" class="button-group">
+        <button class="btn is-checked" data-filter="*">All Projects</button>
+        <button class="btn" data-filter=".packaging">Packaging</button>
+        <button class="btn" data-filter=".health">Health Supplement</button>
+        <button class="btn" data-filter=".marketing">Marketing</button>
+        <button class="btn" data-filter=".iot">IoT</button>
+    </div>
 
+    <div class="box-container">
+    </div>
 
-  <h2 class="heading"><i class="fas fa-laptop-code"></i> Projects <span>Made</span></h2>
+    <div class="backbtn">
+        <a href="/#work" class="btn">
+            <i class="fas fa-arrow-left"></i>
+            <span>Back to Home</span>
+        </a>
+    </div>
 
-  
-
-  <div id="filters" class="button-group">
-
-    <button class="btn is-checked" data-filter="*">All Projects</button>
-
-    <button class="btn" data-filter=".packaging">Packaging</button>
-
-    <button class="btn" data-filter=".health">Health Supplement</button>
-
-    <button class="btn" data-filter=".marketing">Marketing</button>
-
-    <button class="btn" data-filter=".iot">IoT</button>
-
-  </div>
-
+</section>
 
 
   <div class="box-container">
@@ -257,4 +257,5 @@
 </body>
 
 </html>
+
 
