--- a/projects/index.html
+++ b/projects/index.html
@@ -30,7 +30,7 @@
 
 <section class="work" id="work">
 
-  <h2 class="heading"><i class="fas fa-laptop-code"></i> Projects <span>Made</span></h2>
+  <h2 class="heading"><i class="fas fa-laptop-code"></i> Organizational <span>And Project Experiences</span></h2>
   
   <div id="filters" class="button-group">
     <button class="btn is-checked" data-filter="*">All Projects</button>
@@ -61,3 +61,4 @@
 
 </body>
 </html>
+
