--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
     <div id="particles-js"></div>
 
     <div class="content">
-    <h2>Hi There,<br/> I'm Muhamad Imam <span>Fahurrozi</span></h2>
-    <p>i am into <span class="typing-text"></span></p>
+    <h2>>Muhamad Imam <span>Fahurrozi</span></h2>
+    <p>I am a <span class="typing-text"></span></p>
     <a href="#about" class="btn"><span>About Me</span>
       <i class="fas fa-arrow-circle-down"></i>
     </a>
@@ -499,3 +499,4 @@
 
 </body>
 </html>
+
