--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <div id="particles-js"></div>
 
     <div class="content">
-    <h2>>Muhamad Imam <span>Fahurrozi</span></h2>
+    <h2>Muhamad Imam <span>Fahurrozi<span>Website Portofolio</span></h2>
     <p>I am a <span class="typing-text"></span></p>
     <a href="#about" class="btn"><span>About Me</span>
       <i class="fas fa-arrow-circle-down"></i>
@@ -499,4 +499,5 @@
 
 </body>
 </html>
+
 
