--- a/projects/index.html
+++ b/projects/index.html
@@ -41,7 +41,72 @@
   </div>
 
   <div class="box-container">
+
+    <div class="box tilt packaging">
+      <img src="/assets/images/projects/project-gula-aren.png" alt="Smart and Intelligent Packaging for Palm Sugar" />
+      <div class="content">
+        <div class="tag">
+          <h3>Smart Packaging for Palm Sugar</h3>
+        </div>
+        <div class="desc">
+          <p>Developed packaging for palm sugar with a smart and intelligent packaging concept.</p>
+          <div class="btns">
+            <a href="#" class="btn" target="_blank"><i class="fas fa-eye"></i> View</a>
+            <a href="#" class="btn" target="_blank">Code <i class="fas fa-code"></i></a>
+          </div>
+        </div>
+      </div>
     </div>
+
+    <div class="box tilt health">
+      <img src="/assets/images/projects/project-sappancare.png" alt="SappanCare Health Supplement" />
+      <div class="content">
+        <div class="tag">
+          <h3>SappanCare (Cholesterol Health Supplement)</h3>
+        </div>
+        <div class="desc">
+          <p>Developed a health supplement to combat cholesterol from Sappan wood extract (Caesalpinia sappan L.).</p>
+          <div class="btns">
+            <a href="#" class="btn" target="_blank"><i class="fas fa-eye"></i> View</a>
+            <a href="#" class="btn" target="_blank">Code <i class="fas fa-code"></i></a>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="box tilt marketing">
+      <img src="/assets/images/projects/project-umkm.png" alt="Marketing Module and Design for UMKM Tunjungrejo" />
+      <div class="content">
+        <div class="tag">
+          <h3>Marketing Strategy for SMEs Tunjungrejo</h3>
+        </div>
+        <div class="desc">
+          <p>Developed marketing modules and design for chip products at UMKM Tunjungrejo, as part of MMD Universitas Brawijaya program.</p>
+          <div class="btns">
+            <a href="#" class="btn" target="_blank"><i class="fas fa-eye"></i> View</a>
+            <a href="#" class="btn" target="_blank">Code <i class="fas fa-code"></i></a>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="box tilt iot">
+      <img src="/assets/images/projects/project-iot-wastewater.png" alt="IoT Wastewater Monitoring System" />
+      <div class="content">
+        <div class="tag">
+          <h3>IoT Wastewater Monitoring System Prototype</h3>
+        </div>
+        <div class="desc">
+          <p>Designed and built a prototype for an Internet of Things (IoT) based wastewater temperature and turbidity monitoring system.</p>
+          <div class="btns">
+            <a href="#" class="btn" target="_blank"><i class="fas fa-eye"></i> View</a>
+            <a href="#" class="btn" target="_blank">Code <i class="fas fa-code"></i></a>
+          </div>
+        </div>
+      </div>
+    </div>
+
+  </div>
 
   <div class="backbtn">
     <a href="/#work" class="btn">
@@ -61,4 +126,3 @@
 
 </body>
 </html>
-
