--- a/index.html
+++ b/index.html
@@ -244,50 +244,77 @@
 </div>
 </section>
 <section class="work" id="work">
-  <h2 class="heading"><i class="fas fa-laptop-code"></i> Projects <span>Made</span></h2>
-  
-  <div class="projects-grid">
 
-    <div class="project-item">
+  <h2 class="heading"><i class="fas fa-laptop-code"></i> Organizational <span>And Project Experiences</span></h2>
+
+  <div class="box-container">
+
+    </div>
+<div class="box-container">
+
+    <div class="box tilt packaging">
       <img src="/assets/images/project-gula-aren.png" alt="Smart and Intelligent Packaging for Palm Sugar" />
       <div class="content">
-        <h3>Smart Packaging for Palm Sugar</h3>
-        <p>Developed packaging for palm sugar with a smart and intelligent packaging concept.</p>
+        <div class="tag">
+          <h3>Smart Packaging for Palm Sugar</h3>
+        </div>
+        <div class="desc">
+          <p>Developed packaging for palm sugar with a smart and intelligent packaging concept.</p>
+          <div class="btns">
+            <a href="#" class="btn" target="_blank"><i class="fas fa-eye"></i> View</a>
+            <a href="#" class="btn" target="_blank">Code <i class="fas fa-code"></i></a>
+          </div>
+        </div>
       </div>
     </div>
 
-    <div class="project-item">
+    <div class="box tilt health">
       <img src="/assets/images/project-sappancare.png" alt="SappanCare Health Supplement" />
       <div class="content">
-        <h3>SappanCare (Cholesterol Health Supplement)</h3>
-        <p>Developed a health supplement to combat cholesterol from Sappan wood extract (Caesalpinia sappan L.).</p>
+        <div class="tag">
+          <h3>SappanCare (Cholesterol Health Supplement)</h3>
+        </div>
+        <div class="desc">
+          <p>Developed a health supplement to combat cholesterol from Sappan wood extract (Caesalpinia sappan L.).</p>
+          <div class="btns">
+            <a href="#" class="btn" target="_blank"><i class="fas fa-eye"></i> View</a>
+            <a href="#" class="btn" target="_blank">Code <i class="fas fa-code"></i></a>
+          </div>
+        </div>
       </div>
     </div>
 
-    <div class="project-item">
+    <div class="box tilt marketing">
       <img src="/assets/images/project-umkm.png" alt="Marketing Module and Design for UMKM Tunjungrejo" />
       <div class="content">
-        <h3>Marketing Strategy for SMEs Tunjungrejo</h3>
-        <p>Developed marketing modules and design for chip products at UMKM Tunjungrejo, as part of MMD Universitas Brawijaya program.</p>
+        <div class="tag">
+          <h3>Marketing Strategy for SMEs Tunjungrejo</h3>
+        </div>
+        <div class="desc">
+          <p>Developed marketing modules and design for chip products at UMKM Tunjungrejo, as part of MMD Universitas Brawijaya program.</p>
+          <div class="btns">
+            <a href="#" class="btn" target="_blank"><i class="fas fa-eye"></i> View</a>
+            <a href="#" class="btn" target="_blank">Code <i class="fas fa-code"></i></a>
+          </div>
+        </div>
       </div>
     </div>
 
-    <div class="project-item">
+    <div class="box tilt iot">
       <img src="/assets/images/project-iot-wastewater.png" alt="IoT Wastewater Monitoring System" />
       <div class="content">
-        <h3>IoT Wastewater Monitoring System Prototype</h3>
-        <p>Designed and built a prototype for an Internet of Things (IoT) based wastewater temperature and turbidity monitoring system.</p>
+        <div class="tag">
+          <h3>IoT Wastewater Monitoring System Prototype</h3>
+        </div>
+        <div class="desc">
+          <p>Designed and built a prototype for an Internet of Things (IoT) based wastewater temperature and turbidity monitoring system.</p>
+          <div class="btns">
+            <a href="#" class="btn" target="_blank"><i class="fas fa-eye"></i> View</a>
+            <a href="#" class="btn" target="_blank">Code <i class="fas fa-code"></i></a>
+          </div>
+        </div>
       </div>
     </div>
-
-  </div>
-  
-  <div class="backbtn">
-    <a href="/#work" class="btn">
-        <i class="fas fa-arrow-left"></i>
-        <span>Back to Home</span>
-    </a>
-  </div>
        
  
 </section>
@@ -532,11 +559,3 @@
 
 </body>
 </html>
-
-
-
-
-
-
-
-
