--- a/index.html
+++ b/index.html
@@ -249,11 +249,8 @@
 
   <div class="box-container">
 
-    </div>
-<div class="box-container">
-
     <div class="box tilt packaging">
-      <img src="/assets/images/project-gula-aren.png" alt="Smart and Intelligent Packaging for Palm Sugar" />
+      <img draggable="false" src="./assets/images/projects/project-gula-aren.png" alt="Smart and Intelligent Packaging for Palm Sugar" />
       <div class="content">
         <div class="tag">
           <h3>Smart Packaging for Palm Sugar</h3>
@@ -269,7 +266,7 @@
     </div>
 
     <div class="box tilt health">
-      <img src="/assets/images/project-sappancare.png" alt="SappanCare Health Supplement" />
+      <img draggable="false" src="./assets/images/projects/project-sappancare.png" alt="SappanCare Health Supplement" />
       <div class="content">
         <div class="tag">
           <h3>SappanCare (Cholesterol Health Supplement)</h3>
@@ -285,7 +282,7 @@
     </div>
 
     <div class="box tilt marketing">
-      <img src="/assets/images/project-umkm.png" alt="Marketing Module and Design for UMKM Tunjungrejo" />
+      <img draggable="false" src="./assets/images/projects/project-umkm.png" alt="Marketing Module and Design for UMKM Tunjungrejo" />
       <div class="content">
         <div class="tag">
           <h3>Marketing Strategy for SMEs Tunjungrejo</h3>
@@ -301,7 +298,7 @@
     </div>
 
     <div class="box tilt iot">
-      <img src="/assets/images/project-iot-wastewater.png" alt="IoT Wastewater Monitoring System" />
+      <img draggable="false" src="./assets/images/projects/project-iot-wastewater.png" alt="IoT Wastewater Monitoring System" />
       <div class="content">
         <div class="tag">
           <h3>IoT Wastewater Monitoring System Prototype</h3>
@@ -315,7 +312,15 @@
         </div>
       </div>
     </div>
-       
+
+  </div>
+
+  <div class="viewall">
+    <a href="/projects" class="btn">
+        <span>View All</span>
+        <i class="fas fa-arrow-right"></i>
+    </a>
+  </div>
  
 </section>
 <section class="experience" id="experience">
@@ -559,3 +564,4 @@
 
 </body>
 </html>
+
