--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@
 </section>
 <section class="experience" id="experience">
 
-  <h2 class="heading"><i class="fas fa-briefcase"></i> Experience </h2>
+  <h2 class="heading"><i class="fas fa-briefcase"></i> Internship and Assistanship Experience </h2>
 
   <div class="timeline">
 
@@ -349,10 +349,10 @@
     <div class="container left">
       <div class="content">
         <div class="tag">
-          <h2>Waste Technology Practicum Assistant</h2>
+          <h2>Bioindustrial Laboratory Universitas Brawijaya</h2>
         </div>
         <div class="desc">
-            <h3>Assistant Lecturer</h3>
+            <h3>Waste Technology Practicum Assistant</h3>
             <p>August 2024 – December 2024</p>
             <ul>
                 <li>Creating a Waste Technology practicum module with the topic of Anaerobic Digestion covering theory, procedures, and implementation guidelines</li>
@@ -365,10 +365,10 @@
     <div class="container right">
       <div class="content">
         <div class="tag">
-          <h2>Industrial Microbiology Practicum Assistant</h2>
+          <h2>Bioindustrial Laboratory Universitas Brawijaya</h2>
         </div>
         <div class="desc">
-            <h3>Assistant Lecturer</h3>
+            <h3>Industrial Microbiology Practicum Assistant</h3>
             <p>February 2024 – July 2024</p>
             <ul>
                 <li>Compiling materials and guiding Industrial Microbiology practices, including solid and liquid substrate fermentation and product manufacturing (tempeh, kimchi, yogurt)</li>
@@ -377,8 +377,35 @@
         </div>
       </div>
     </div>
+      
+<div class="container left">
+      <div class="content">
+        <div class="tag">
+          <h2>Educational Laboratory Faculty of Agricultural Technology</h2>
+        </div>
+        <div class="desc">
+            <h3>General Biology Practicum Assistant</h3>
+            <p>February 2024 – July 2024</p>
+            <ul>
+                <li>Developed General Biology practicum modules on plant structure and physiology, including theoretical content, procedures, presentations, and tutorial videos to enhance student understanding</li>
+                <li>Guided 40+ students during lab sessions, assessed lab reports using standardized rubrics, provided feedback, and ensured clarity, safety, and engagement throughout the practicum</li>
+            </ul>
+        </div>
+      </div>
+    </div>
+<div class="morebtn">
+    <a href="/experience" class="btn"><span>View All</span>
+      <i class="fas fa-arrow-right"></i>
+  </a>
+  </div>
 
-    <div class="container left">
+</section>
+<section class="experience" id="experience">
+
+  <h2 class="heading"><i class="fas fa-briefcase"></i> Organizational and Student Committee Experience </h2>
+
+  <div class="timeline"> 
+    <div class="container right">
         <div class="content">
           <div class="tag">
             <h2>HIMATITAN FTP UB</h2>
@@ -394,7 +421,7 @@
         </div>
     </div>
 
-    <div class="container right">
+    <div class="container left">
         <div class="content">
           <div class="tag">
             <h2>BEM FTP UB</h2>
@@ -410,7 +437,7 @@
         </div>
     </div>
 
-    <div class="container left">
+    <div class="container right">
         <div class="content">
           <div class="tag">
             <h2>PPK Ormawa Team of HIMATITAN X HIMABIO UB</h2>
@@ -426,7 +453,7 @@
         </div>
     </div>
 
-    <div class="container right">
+    <div class="container left">
         <div class="content">
           <div class="tag">
             <h2>FTP Edu Action</h2>
@@ -442,7 +469,7 @@
         </div>
     </div>
 
-    <div class="container left">
+    <div class="container right">
         <div class="content">
           <div class="tag">
             <h2>HIMATITAN Social Project</h2>
@@ -564,4 +591,5 @@
 
 </body>
 </html>
+
 
