--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
 </section>
 <section class="work" id="work">
 
-  <h2 class="heading"><i class="fas fa-laptop-code"></i> Organizational <span>And Project Experiences</span></h2>
+  <h2 class="heading"><i class="fas fa-laptop-code"></i> Project <span>Experiences</span></h2>
 
   <div class="box-container">
 
@@ -325,7 +325,7 @@
 </section>
 <section class="experience" id="experience">
 
-  <h2 class="heading"><i class="fas fa-briefcase"></i> Internship and Assistanship Experience </h2>
+  <h2 class="heading"><i class="fas fa-briefcase"></i> Internship and Assistanship Experiences </h2>
 
   <div class="timeline">
 
@@ -591,5 +591,6 @@
 
 </body>
 </html>
+
 
 
