--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
             <li><a href="#about">About</a></li>
             <li><a href="#skills">Skills</a></li>
             <li><a href="#education">Education</a></li>
-            <li><a href="#work">Work</a></li>
-            <li><a href="#experience">Experience</a></li>
+            <li><a href="#work">Project Exp</a></li>
+            <li><a href="#experience">Internship Exp</a></li>
             <li><a href="#contact">Contact</a></li>
         </ul>
     </nav>
@@ -548,8 +548,8 @@
           <a href="#about"><i class="fas fa-chevron-circle-right"></i> About</a>
           <a href="#skills"><i class="fas fa-chevron-circle-right"></i> Skills</a>
           <a href="#education"><i class="fas fa-chevron-circle-right"></i> Education</a>
-          <a href="#work"><i class="fas fa-chevron-circle-right"></i> Work</a>
-          <a href="#experience"><i class="fas fa-chevron-circle-right"></i> Experience</a>
+          <a href="#work"><i class="fas fa-chevron-circle-right"></i> Project Exp</a>
+          <a href="#experience"><i class="fas fa-chevron-circle-right"></i> Internship Exp</a>
       </div>
 
       <div class="box">
@@ -591,6 +591,7 @@
 
 </body>
 </html>
+
 
 
 
