Change greeting from 'Hello World' to 'Goodbye World'

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         <h3>I'm Muhamad Imam Fahurrozi</h3>
         <span class="tag">Fresh Graduate Agroindustrial Technology</span>
         
-        <p>I am a fresh graduate from Agroindustrial Technology at Universitas Brawijaya with a strong passion for quality control and production. Through my active involvement in HIMATITAN FTP UB, BEM FTP UB, assistantship, and internship experiences, I have developed leadership, public speaking, teamwork, analytical, and laboratory skills.</p>
+        <p>I am a fresh graduate from Agroindustrial Technology at Universitas Brawijaya with a strong passion for manufacturing excellence, marketing, and supply chain management. Through my active involvement in HIMATITAN FTP UB, BEM FTP UB, 3 laboratory assistantship, and 1 internship experiences, I have developed leadership, communication, teamwork, analytical, and laboratory skills. Achieved 3rd Place in the 2024 National Essay Competition (ENOTECH), served as Head of Community Service and Relations Division HIMATITAN 2024, actively participated in 10+ student activities, 3 competitions, 5+ team-based projects, and presented in 2 international conferences</p>
         
         <div class="box-container">
             <div class="box">
@@ -591,6 +591,7 @@
 
 </body>
 </html>
+
 
 
 
